--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. a=\"Hello Python\" 문자열을 Slicing과 연결 연산자 (+)를 사용하여 \"Python Hello\"로 변경하시오.\n",
+    "**1. a=\"Hello Python\" 문자열을 Slicing과 연결 연산자 (+)를 사용하여 \"Python Hello\"로 변경하시오.**\n",
     " * [주의] a 변수 자체에 \"Python Hello\" 문자열이 저장되어야 함"
    ]
   },
@@ -42,13 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. b=\"Hello Python World\" 문자열을 Slicing과 연결 연산자 (+)를 사용하여 \"World Python Hello\"로 변경하시오.\n",
+    "**2. b=\"Hello Python World\" 문자열을 Slicing과 연결 연산자 (+)를 사용하여 \"World Python Hello\"로 변경하시오.**\n",
     " * [주의] b 변수 자체에 \"World Python Hello\" 문자열이 저장되어야 함"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. c=\"Hello\"를 \"olleH\"로 변경하시오\n",
+    "**3. c=\"Hello\"를 \"olleH\"로 변경하시오**\n",
     " * [주의] c 변수 자체에 \"olleH\" 문자열이 저장되어야 함"
    ]
   },
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. s=\"python\"에 대해 다음 문제를 풀어보시오."
+    "**4. s=\"python\"에 대해 다음 문제를 풀어보시오.**"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. for문을 활용하여 1부터 100사이의 홀수를 출력하시오."
+    "**5. for문을 활용하여 1부터 100사이의 홀수를 출력하시오.**"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. while문을 활용하여 1부터 100사이의 짝수의 합을 계산하여 출력하시오."
+    "**6. while문을 활용하여 1부터 100사이의 짝수의 합을 계산하여 출력하시오.**"
    ]
   },
   {
@@ -408,7 +408,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. 사용자로 부터 임의의 정수를 입력받고, 해당 숫자를 역순으로 출력하는 프로그램을 작성하시오.\n",
+    "**7. 사용자로 부터 임의의 정수를 입력받고, 해당 숫자를 역순으로 출력하는 프로그램을 작성하시오.**\n",
+    "\n",
     "        [실행 예]\n",
     "        \n",
     "        정수를 입력하세요 : 3125\n",
@@ -445,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. 사용자로 부터 정수를 입력받아서 1부터 그 사이에 존재하는 소수 (Prime number)를 출력하는 파이썬 프로그램을 작성하시오."
+    "**8. 사용자로 부터 정수를 입력받아서 1부터 그 사이에 존재하는 소수 (Prime number)를 출력하는 파이썬 프로그램을 작성하시오.**"
    ]
   },
   {
@@ -486,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. [ACM-ICPC 문제 2441번]\n",
+    "**9. [ACM-ICPC 문제 2441번]**\n",
     " * 별찍기 - 4"
    ]
   },
@@ -538,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. [ACM-ICPC 문제 11721번]\n",
+    "**10. [ACM-ICPC 문제 11721번]**\n",
     " * 열 개씩 끊어 출력하기"
    ]
   },
@@ -587,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11. [ACM-ICPC 문제 2839번]\n",
+    "**11. [ACM-ICPC 문제 2839번]**\n",
     " * 설탕배달"
    ]
   },
